--- a/src/scss/fontawesome/_variables.scss
+++ b/src/scss/fontawesome/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-c
+$fa-font-path:         "../webfonts" !default;
 $fa-font-size-base:    16px !default;
 $fa-font-display:      block !default;
 $fa-css-prefix:        fa !default;
