add credit card section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,3 +42,7 @@
 @import "bootstrap/spinners";
 @import "bootstrap/utilities";
 @import "bootstrap/print";
+
+@import "fonts";
+@import "cc";
+@import "layout";
